vanguard_k8s/k8s/dr/mtls.yml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: dr
spec:
  mtls:
    mode: STRICT
