vanguard_k8s/k8s/dr/3-gateway-prom-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-prom
  namespace: istio-ingress
  labels:
    prometheus-scrape: istio-gateway
spec:
  type: ClusterIP
  ports:
    - name: metrics
      port: 15090
      targetPort: 15090
  selector:
    app: gateway
    istio: gateway # Matched to exact pod label from your output
