vanguard_k8s/k8s/dr/gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: vanguardyouth-dr-shared-gateway
  namespace: istio-ingress
  annotations:
    # 🌟 Route 53 DNS target for root & wildcard production domains in DR
    external-dns.alpha.kubernetes.io/hostname: "vanguardyouth.store, *.vanguardyouth.store"
spec:
  selector:
    istio: gateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "vanguardyouth.store"
        - "*.vanguardyouth.store"
      tls:
        httpsRedirect: true

    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
        - "vanguardyouth.store"
        - "*.vanguardyouth.store"
      tls:
        mode: SIMPLE
        credentialName: vanguardyouth-dr-tls-cert
